Fix header/row alignment on very wide ellipsis cells and remove overflow: hidden mode on dropdown cells. (#224)
* Fix header/row alignment on lvery wide ellipsis cells and remove overflow: hidden mode on dropdown cells.

* Fix dropdown cell visibility and adjust column widths for better layout


---------

--- a/src/views/manage-components-packs/view/components/component-pack-manager.css
+++ b/src/views/manage-components-packs/view/components/component-pack-manager.css
@@ -46,6 +46,10 @@
     cursor: default;
 }
 
+.components-view-root .description-column {
+    max-width: 55vw;
+}
+
 .faded {
     opacity: 0.5;
     margin-left: 0.5em;
@@ -252,6 +256,10 @@ th.ant-table-cell {
 
 .components-view-root th.ant-table-cell:nth-child(2) {
     text-indent: -10px;
+}
+
+.variant-column {
+    overflow: unset !important;
 }
 
 .packs-view-root .expandable-references {
