--- a/src/views/manage-components-packs/view/components/packs-view.css
+++ b/src/views/manage-components-packs/view/components/packs-view.css
@@ -52,3 +52,7 @@
     color: var(--vscode-foreground);
     vertical-align: text-bottom;
 }
+
+.packs-view-root .description-column {
+    max-width: 65vw;
+}
